Wired: fix some articles appearing with white text on a white background in dark mode

--- a/styles/wired.user.css
+++ b/styles/wired.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wired
 @namespace      https://aldaviva.com/userstyles/
-@version        1.0.2
+@version        1.0.3
 @description    Dark mode for articles
 @author         Ben Hutchison <ben@aldaviva.com> (https://aldaviva.com)
 @license        MIT
@@ -23,7 +23,8 @@
         .page,
         header.site-navigation,
         #bookmark,
-        #link-banner {
+        #link-banner,
+        .article-white-background {
             background-color: black !important;
         }
         
